--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,15 @@
 # Configurations
-title:            Jekyll Gitbook
-longtitle:        Jekyll Gitbook
-author:           HE Tao
-email:            sighingnow@gmail.com
+title:            Nate_fu 
+longtitle:        学习整理
+author:           Nate_fu
+email:            natefuy@gmail.com
 description: >
-  Build Jekyll site with the GitBook style.
+  竹杖芒鞋 乘风破浪
 
 version:          1.0
 gitbook_version:  3.2.3
 
-url:              'https://sighingnow.github.io'
+url:              'https://fyhsgsgssg.github.io'
 baseurl:          ''
 rss:              RSS
 
